<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/register_signup"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivRegisterBack"
        app:layout_constraintStart_toEndOf="@+id/ivRegisterBack"
        app:layout_constraintTop_toTopOf="@+id/ivRegisterBack" />

    <ImageView
        android:id="@+id/ivRegisterBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tilRegisterName"
        app:layout_constraintStart_toStartOf="@+id/tilRegisterName"
        app:layout_constraintTop_toBottomOf="@+id/tilRegisterName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tilRegisterEmail"
        app:layout_constraintStart_toStartOf="@+id/tilRegisterEmail"
        app:layout_constraintTop_toBottomOf="@+id/tilRegisterEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:maxLength="12" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tilRegisterPassword"
        app:layout_constraintStart_toStartOf="@+id/tilRegisterPassword"
        app:layout_constraintTop_toBottomOf="@+id/tilRegisterPassword"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_confirm_password"
            android:inputType="textPassword"
            android:maxLength="12" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterDOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tilRegisterConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/tilRegisterConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/tilRegisterConfirmPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/register_dob" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/register_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tilRegisterDOB"
        app:layout_constraintStart_toStartOf="@+id/tilRegisterDOB"
        app:layout_constraintTop_toBottomOf="@+id/tilRegisterDOB" />


</androidx.constraintlayout.widget.ConstraintLayout>